err/django-filebrowser-no-grappelli-nph.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_filebrowser_no_grappelli_nph-3.4.9.egg-info'...
Listing './lib/python3.5/site-packages/filebrowser'...
Compiling './lib/python3.5/site-packages/filebrowser/decorators.py'...
***   File "./lib/python3.5/site-packages/filebrowser/decorators.py", line 23
    raise ImproperlyConfigured, _("Error finding Upload-Folder (MEDIA_ROOT + DIRECTORY). Maybe it does not exist?")
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/filebrowser/functions.py'...
***   File "./lib/python3.5/site-packages/filebrowser/functions.py", line 256
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/filebrowser/locale'...
Listing './lib/python3.5/site-packages/filebrowser/locale/az'...
Listing './lib/python3.5/site-packages/filebrowser/locale/az/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/de'...
Listing './lib/python3.5/site-packages/filebrowser/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/en'...
Listing './lib/python3.5/site-packages/filebrowser/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/es'...
Listing './lib/python3.5/site-packages/filebrowser/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/fr'...
Listing './lib/python3.5/site-packages/filebrowser/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ja'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ja_JP'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ja_JP/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/mn'...
Listing './lib/python3.5/site-packages/filebrowser/locale/mn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/pl_PL'...
Listing './lib/python3.5/site-packages/filebrowser/locale/pl_PL/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/pt_BR'...
Listing './lib/python3.5/site-packages/filebrowser/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ru_RU'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ru_RU/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/sl_SI'...
Listing './lib/python3.5/site-packages/filebrowser/locale/sl_SI/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/tr_TR'...
Listing './lib/python3.5/site-packages/filebrowser/locale/tr_TR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/zh_CN'...
Listing './lib/python3.5/site-packages/filebrowser/locale/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/management'...
Listing './lib/python3.5/site-packages/filebrowser/management/commands'...
Compiling './lib/python3.5/site-packages/filebrowser/settings.py'...
***   File "./lib/python3.5/site-packages/filebrowser/settings.py", line 122
    DEFAULT_PERMISSIONS = getattr(settings, "FILEBROWSER_DEFAULT_PERMISSIONS", 0755)
                                                                                  ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/filebrowser/sites.py'...
***   File "./lib/python3.5/site-packages/filebrowser/sites.py", line 292
    except OSError, (errno, strerror):
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/filebrowser/static'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/css'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/img'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/js'...
Listing './lib/python3.5/site-packages/filebrowser/templates'...
Listing './lib/python3.5/site-packages/filebrowser/templates/filebrowser'...
Listing './lib/python3.5/site-packages/filebrowser/templates/filebrowser/include'...
Listing './lib/python3.5/site-packages/filebrowser/templates/filebrowser/widgets'...
Listing './lib/python3.5/site-packages/filebrowser/templatetags'...
Compiling './lib/python3.5/site-packages/filebrowser/templatetags/fb_tags.py'...
***   File "./lib/python3.5/site-packages/filebrowser/templatetags/fb_tags.py", line 145
    raise TemplateSyntaxError, "%s tag requires 2 arguments" % token.contents.split()[0]
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/filebrowser/templatetags/fb_versions.py'...
***   File "./lib/python3.5/site-packages/filebrowser/templatetags/fb_versions.py", line 80
    raise TemplateSyntaxError, "%s tag requires 2 arguments" % token.contents.split()[0]
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/filebrowser/tests'...
Compiling './lib/python3.5/site-packages/filebrowser/tests/sites.py'...
***   File "./lib/python3.5/site-packages/filebrowser/tests/sites.py", line 220
    print "Removing left-over tmp dir:", self.tmpdir.path
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
